# zarlock-cpp

./: CMakeLists.txt  Doxyfile  README  VersionFileBuilder.cpp  build_MinGW.bat  build_MinGW.sh  build_linux.sh  build_translation_file.sh  config.h.in  index.html  main.cpp  params.json  zarlok-desktop.sh  zarlok.kdev4
CMakeMacros/: CPackConfigurationLinux.cmake.in  CPackConfigurationPrepare.cmake  CPackConfigurationWin.cmake.in  MakeInstallator.cmake  MakeVersionConfig.cmake  UserMacros.cmake
config/: config.h.in  version.h.in
extradoc/: zalcznik_20070612_232059_wzor_nr_11_-_zestawienie_zbiorcze_wyd_na_wyzywienie.doc  zalcznik_20070902_133803_wzor_nr_13_-_kartoteka_magazynowa.doc  zarlock.lyx
macros/: macro_cpack_configuration.txt.in  make_cpack_configuration.txt  make_installator.txt  make_version_config.txt  user_macros.txt
misc/: zarlok.desktop.in
src/: CampProperties.h  DataParser.cpp  DataParser.h  EventFilter.cpp  EventFilter.h  Logger.h  appicon.rc  database.qrc  globals.h  icons.qrc  reports.qrc  splash.qrc  translations.qrc  zarlok.cpp  zarlok.h
src/db/: CampProperties.cpp  CampProperties.h  DBReports.cpp  DBReports.h  Database.cpp  Database.h  MealManager.cpp  MealManager.h
src/gui/: AddBatchRecordWidget.cpp  AddBatchRecordWidget.h  AddProductsRecordWidget.cpp  AddProductsRecordWidget.h  BatchTableView.h  ProductsTableView.cpp  ProductsTableView.h
src/gui/dialogs/: AboutDialog.cpp  AboutDialog.h  AbstractDimmingWidget.cpp  AbstractDimmingWidget.h  CampSettingsDialog.cpp  CampSettingsDialog.h  DBExportDialog.cpp  DBExportDialog.h  DimmingMessage.cpp  DimmingMessage.h  DimmingWidget.cpp  DimmingWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/gui/inputs/: AbstractInputWidget.cpp  AbstractInputWidget.h  CustomLineEdit.cpp  CustomLineEdit.h  DateInput.cpp  DateInput.h  ExpandableComboBox.cpp  ExpandableComboBox.h  PriceInput.cpp  PriceInput.h  QtyInput.cpp  QtyInput.h  QtySpinInput.cpp  QtySpinInput.h  TextInput.cpp  TextInput.h  UnitInput.cpp  UnitInput.h
src/gui/items/: MealFoodListItemDataWidget.cpp  MealFoodListItemDataWidget.h  MealFoodListItemNewWidget.cpp  MealFoodListItemNewWidget.h
src/gui/views/: AbstractTableView.cpp  AbstractTableView.h  BatchTableView.cpp  BatchTableView.h  DistributorTableView.cpp  DistributorTableView.h  MealDaysTableView.cpp  MealDaysTableView.h  ProductsTableView.cpp  ProductsTableView.h  TableDelegates.cpp  TableDelegates.h
src/gui/widgets/: AbstractRecordWidget.cpp  AbstractRecordWidget.h  AddBatchRecordWidget.cpp  AddBatchRecordWidget.h  AddDistributorRecordWidget.cpp  AddDistributorRecordWidget.h  AddFoodRecordWidget.cpp  AddFoodRecordWidget.h  AddMealRecordWidget.cpp  AddMealRecordWidget.h  AddProductsRecordWidget.cpp  AddProductsRecordWidget.h  BatchRecordWidget.cpp  BatchRecordWidget.h  CampSettingsWidget.cpp  CampSettingsWidget.h  DBBrowser.cpp  DBBrowser.h  DBExportCommon.cpp  DBExportCommon.h  DBExportWidget.cpp  DBExportWidget.h  DBImportWidget.cpp  DBImportWidget.h  DBItemWidget.cpp  DBItemWidget.h  DistributorRecordWidget.cpp  DistributorRecordWidget.h  MainTabWidget.cpp  MainTabWidget.h  MealFoodList.cpp  MealFoodList.h  MealTabInsertWidget.cpp  MealTabInsertWidget.h  MealTabWidget.cpp  MealTabWidget.h  ProductsRecordWidget.cpp  ProductsRecordWidget.h  QProgressIndicator.cpp  TabBatchWidget.cpp  (+7 more)
src/misc/: ApplicationUpdater.cpp  ApplicationUpdater.h  DataParser.cpp  DataParser.h  EventFilter.cpp  EventFilter.h  Logger.cpp  Logger.h  ProgramSettings.cpp  ProgramSettings.h
src/misc/net/: AbstractNetworkService.cpp  AbstractNetworkService.h  FeedService.cpp  FeedService.h  NetworkServicesManager.cpp  NetworkServicesManager.h  UpdateCheckService.cpp  UpdateCheckService.h  UpdateDownloadService.cpp  UpdateDownloadService.h
src/models/: AbstractTableModel.cpp  AbstractTableModel.h  BatchTableModel.cpp  BatchTableModel.h  BatchTableModelProxy.cpp  BatchTableModelProxy.h  BatchTableModelProxyP.cpp  BatchTableModelProxyP.h  DistributorTableModel.cpp  DistributorTableModel.h  DistributorTableModelProxy.cpp  DistributorTableModelProxy.h  DistributorTableModelProxyP.cpp  DistributorTableModelProxyP.h  MealDayTableModel.cpp  MealDayTableModel.h  MealTableModel.cpp  MealTableModel.h  MealTableModelProxy.cpp  MealTableModelProxy.h  ModelsCommon.cpp  ModelsCommon.h  ProductsTableModel.cpp  ProductsTableModel.h
src/resources/: database.sql  database_00000301.sql  database_3100.sql  dbconv_00000030_00000301_part_a.sql  dbconv_00000030_00000301_part_b.sql  dbconv_00000030_00000301_part_c.sql  dbconv_00000301_00000302_part_a.sql  dbconv_00000302_00000303_part_a.sql  report.css  report_batch.tpl  report_dailymeal.css  report_dailymeal.tpl  report_form11a.tpl  report_form13a.tpl  test_data.sql  test_data_3100.sql
src/translations/: zarlok_pl.ts  zarlok_pl_PL.ts
src/ui/: AboutDialog.ui  AddBatchRecordWidget.ui  AddDistributorRecordWidget.ui  AddFoodRecordWidget.ui  AddMealRecordWidget.ui  AddProductsRecordWidget.ui  BatchRecordWidget.ui  CampSettings.ui  CampSettingsDialog.ui  DBExportDialog.ui  DBExportWidget.ui  DBImportWidget.ui  DBItem.ui  DatabaseBrowser.ui  DistributorRecordWidget.ui  MainWindow.ui  MealFoodListItemDataWidget.ui  MealTabInsertWidget.ui  ProductsRecordWidget.ui  SettingsDialog.ui  TabBatchWidget.ui  TabDistributorWidget.ui  TabMealWidget.ui  TabProductsWidget.ui
